--- a/package.json
+++ b/package.json
@@ -1,7 +1,9 @@
 {
-  "name": "mt-portfolio-page",
-  "version": "0.1.0",
+  "name": "nextjs-tailwind-resume-page",
+  "version": "1.0.0",
   "private": true,
+  "license": "See license in https://www.creative-tim.com/license",
+  "homepage": "https://demos.creative-tim.com/nextjs-tailwind-resume-page",
   "scripts": {
     "dev": "next dev",
     "build": "next build",
@@ -25,17 +27,5 @@
     "postcss": "^8",
     "tailwindcss": "^3",
     "typescript": "^5"
-  },
-  "description": "## Quick Start",
-  "main": "next.config.js",
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/decipheron/material-tailwind-react-portfolio-template.git"
-  },
-  "author": "",
-  "license": "ISC",
-  "bugs": {
-    "url": "https://github.com/decipheron/material-tailwind-react-portfolio-template/issues"
-  },
-  "homepage": "https://github.com/decipheron/material-tailwind-react-portfolio-template#readme"
+  }
 }
